--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Dinos 'R' Us</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="main.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Patua+One&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
-    <h1><img src="images/dinos-r-us.svg" alt="Dinos 'R' Us"<h1>
+    <h1><img src="images/dinos-r-us.svg" alt="Dinos 'R' Us"><h1>
     <nav>
       <ol>
         <li><a href="#hadrosaur">Hadrosaur</a></li>
